Closed Bug 400355 Opened 18 years ago Closed 18 years ago

"WARNING: GetGeckoKeyCodeFromChar has failed" pressing right shift or right cmd

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: jaas)

References

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce: 1. Press the *right* shift or *right* cmd key on a macbook pro. Result: WARNING: GetGeckoKeyCodeFromChar has failed.: file /Users/jruderman/trunk/mozilla/widget/src/cocoa/nsChildView.mm, line 3275 This is annoying because it clutters up the console when I type.
Flags: blocking1.9?
Josh: Do you know the keycode for right shift and right cmd? If you tell them, I'll add them to next patch for bug 399740. # my keyboard doesn't have right cmd...
Don't we have same problem on "right option" key?
I don't know. My keyboard doesn't have a right option key.
(In reply to comment #2) > Don't we have same problem on "right option" key? Yes, it seems we do, and with "right control" as well. (I borrowed my brother's old Pro Keyboard tonight to check this.)
Is there a way nsChildView.mm can tell me these keycodes? I have right option, cmd and shift on my keyboard.
It looks like they're the following, at least for me: right-command: 0x36 right-shift: 0x3C right-option: 0x3D right-control: 0x3E I basically added a warning to ConvertMacToGeckoKeyCode() that prints out the keyCode and those are the values I got.
Flags: blocking1.9? → blocking1.9+
Attached patch fix v1.0Splinter Review
Attachment #286978 - Flags: review?
Attachment #286978 - Flags: review? → review?(masayuki)
Attachment #286978 - Flags: review?(masayuki) → review+
Attachment #286978 - Flags: superreview?(jag)
Attachment #286978 - Flags: superreview?(jag) → superreview+
Attachment #286978 - Flags: approval1.9?
Attachment #286978 - Flags: approval1.9?
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: