Correctly support right-side command, option, shift, and control keys. b=400355 r=masayuki sr=jag